# guanin

./: .gitignore  GUANIN - User guide.docx  INSTALL.txt  LICENSE  README.md  guanin.py  gui.py  pyproject.toml  state.py
examples/: groups_d1_COV_GSE183071.csv  groups_d2_CJ_GSE160208.csv  groups_d3_HD_GSE108395.csv
examples/d1_COV_GSE183071/: GSM5550565_B0248-Blood.RCC  GSM5550568_B0250-Blood.RCC  GSM5550574_B0315-Blood.RCC  GSM5550577_B0317-Blood.RCC  GSM5550585_B0328-Blood.RCC  GSM5550594_B0335-Blood.RCC  GSM5550598_B0342-Blood.RCC  GSM5550608_B0361-Blood.RCC  GSM5550620_B0374-Blood.RCC  GSM5550623_B0375-Blood.RCC  GSM5550629_B0381-Blood.RCC  GSM5550635_B0396-Blood.RCC  GSM5550649_B0415-Blood.RCC  GSM5550652_B0428-Blood.RCC  GSM5550655_B0440-Blood.RCC  GSM5550661_B0506-Blood.RCC  GSM5550667_B0510-Blood.RCC  GSM5550670_B0513-Blood.RCC  GSM5550671_B0514-Blood.RCC  GSM5550677_B0525-Blood.RCC  GSM5550694_B1981-Blood.RCC  GSM5550696_B1985-Blood.RCC
examples/d2_CJ_GSE160208/: GSM4869093_20181113_208111931219_02_CJD-15_CB.RCC  GSM4869098_20181113_208111931219_07_CT-50_FC.RCC  GSM4869103_20181113_208111961219_01_CT-45_CB.RCC  GSM4869104_20181113_208111961219_02_CJD-10_CB.RCC  GSM4869106_20181113_208111961219_04_CT-52_FC.RCC  GSM4869109_20181113_208111961219_07_CJD-18_FC.RCC  GSM4869110_20181113_208111961219_08_CT-46_FC.RCC  GSM4869111_20181113_208111961219_09_CT-46_CB.RCC  GSM4869117_20181114_208111951219_03_CJD-19_FC.RCC  GSM4869120_20181114_208111951219_06_CJD-28_CB.RCC  GSM4869123_20181114_208111951219_09_CJD-13_CB.RCC  GSM4869124_20181114_208111951219_10_CJD-35_CB.RCC  GSM4869126_20181114_208111951219_12_CJD-34_FC.RCC  GSM4869129_20181114_208111971219_03_CJD-29_FC.RCC  GSM4869130_20181114_208111971219_04_CT-47_FC.RCC  GSM4869131_20181114_208111971219_05_CT-47_CB.RCC  GSM4869132_20181114_208111971219_06_CJD-20_CB.RCC  GSM4869136_20181114_208111971219_10_CJD-22_CB.RCC  GSM4869137_20181114_208111971219_11_CJD-22_FC.RCC
examples/d3_HD_GSE108395/: GSM2897335_20150318_C06_C06_03.RCC  GSM2897336_20150407_C02_C02_10.RCC  GSM2897337_20150415_C15_C15_02.RCC  GSM2897339_20150414_C14_C14_07.RCC  GSM2897343_20150617_c18_c18_01.RCC  GSM2897346_20141224_Pre-HD_HD_11.RCC  GSM2897347_20150311_c03_c03_06.RCC  GSM2897348_20150407_C01_C01_03.RCC  GSM2897350_20150407_C02_C02_05.RCC  GSM2897354_20150325_C07_C07_04.RCC  GSM2897355_20150414_C13_C13_12.RCC  GSM2897357_20150407_C01_C01_07.RCC  GSM2897363_20150311_c04_c04_11.RCC  GSM2897364_20150401_C10_C10_05.RCC  GSM2897365_20150318_C05_C05_09.RCC  GSM2897371_20150408_C11_C11_06.RCC  GSM2897373_20150617_c18_c18_06.RCC  GSM2897374_20150311_c04_c04_07.RCC  GSM2897375_20150408_C11_C11_10.RCC  GSM2897379_20150401_C09_C09_03.RCC  GSM2897380_20150415_C16_C16_10.RCC  GSM2897381_20150325_C08_C08_01.RCC  GSM2897383_20150414_C13_C13_02.RCC  GSM2897385_20150318_C05_C05_07.RCC  GSM2897388_20150414_C14_C14_04.RCC  GSM2897390_20150407_C02_C02_03.RCC  GSM2897393_20150414_C13_C13_01.RCC  GSM2897394_20150311_c03_c03_02.RCC  GSM2897395_20141224_Pre-HD_HD_10.RCC  GSM2897396_20150407_C02_C02_11.RCC  GSM2897397_20150415_C15_C15_11.RCC  GSM2897400_20150408_C11_C11_07.RCC  GSM2897401_20150415_C16_C16_12.RCC  GSM2897402_20150414_C13_C13_06.RCC  GSM2897403_20150408_C11_C11_04.RCC  GSM2897405_20150415_C16_C16_03.RCC  GSM2897406_20150414_C13_C13_07.RCC  GSM2897412_20150414_C14_C14_09.RCC  GSM2897413_20150311_c04_c04_12.RCC  GSM2897414_20150318_C05_C05_06.RCC  (+82 more)
guanin/: changelog.md  cli.py  guanin.py  gui.py  state.py  test_guanin.py
guanin/examples/: groups_d1_COV_GSE183071.csv  groups_d3_HD_GSE108395.csv
guanin/examples/d1_COV_GSE183071/: GSM5550571_B0314-Blood.RCC  GSM5550580_B0318-Blood.RCC  GSM5550583_B0319-Blood.RCC  GSM5550586_B0329-Blood.RCC  GSM5550588_B0331-Blood.RCC  GSM5550592_B0334-Blood.RCC  GSM5550597_B0338-Blood.RCC  GSM5550600_B0343-Blood.RCC  GSM5550607_B0354-Blood.RCC  GSM5550611_B0368-Blood.RCC  GSM5550614_B0369-Blood.RCC  GSM5550617_B0372-Blood.RCC  GSM5550626_B0380-Blood.RCC  GSM5550632_B0393-Blood.RCC  GSM5550638_B0399-Blood.RCC  GSM5550643_B0406-Blood.RCC  GSM5550646_B0408-Blood.RCC  GSM5550659_B0478-Blood.RCC  GSM5550664_B0507-Blood.RCC  GSM5550668_B0511-Blood.RCC  GSM5550669_B0512-Blood.RCC  GSM5550672_B0515-Blood.RCC  GSM5550673_B0516-Blood.RCC  GSM5550674_B0517-Blood.RCC  GSM5550675_B0518-Blood.RCC  GSM5550676_B0524-Blood.RCC  GSM5550678_B0527-Blood.RCC  GSM5550679_B0528-Blood.RCC  GSM5550680_B0660-Blood.RCC  GSM5550686_B1913-Blood.RCC  GSM5550695_B1983-Blood.RCC  GSM5550697_B1989-Blood.RCC
guanin/examples/d2_CJ_GSE160208/: GSM4869092_20181113_208111931219_01_CJD-15_FC.RCC  GSM4869094_20181113_208111931219_03_CT-44_FC.RCC  GSM4869095_20181113_208111931219_04_CT-44_CB.RCC  GSM4869096_20181113_208111931219_05_CJD-21_FC.RCC  GSM4869097_20181113_208111931219_06_CJD-21_CB.RCC  GSM4869099_20181113_208111931219_08_CT-50_CB.RCC  GSM4869100_20181113_208111931219_09_CJD-14_CB.RCC  (+21 more)
guanin/reports/: pruebareport.py
guanin/src/: argparser.py
(+111 files in other folders)
