[project]
name = "Guanin"
version = "1.2.2"
authors = [
  { name="Julián Montoto-Louzao", email="juli.mlouzao@gmail.com" },
  { name="Xabier Bello", email="xbello@gmail.com" },
]
dependencies = [
    "fpdf>=1.7.0",
    "matplotlib>=3.7.0",
    "mlxtend>=0.22.0",
    "numpy>=1.25.0",
    "pandas>=2.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "PyQt6",
    "ergene @ https://github.com/xbello/ERgene/archive/refs/tags/v1.2.4.zip",
]
description = "TODO"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
guanin-cli = "guanin.cli:main"

[project.gui-scripts]
guanin-gui = "guanin.gui:main"

[project.urls]
"Homepage" = "https://github.com/julimontoto/guanin"
"Bug Tracker" = "https://github.com/julimontoto/guanin/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = ["guanin"]
