[project]
name = "Guanin"
version = "1.2.2"
authors = [
  { name="Julián Montoto-Louzao", email="juli.mlouzao@gmail.com" },
  { name="Xabier Bello", email="xbello@gmail.com" },
]
dependencies = [
    "fpdf>=1.7.0",
    "matplotlib>=3.7.0",
    "mlxtend>=0.22.0",
    "numpy>=1.25.0",
    "pandas>=2.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "PyQt6",
    "ergene @ https://github.com/xbello/ERgene/archive/refs/tags/v1.2.4.zip",
]
description = "TODO"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
guanin-cli = "guanin.cli:main"

[project.gui-scripts]
guanin-gui = "guanin.gui:main"

[project.urls]
"Homepage" = "https://github.com/julimontoto/guanin"
"Bug Tracker" = "https://github.com/julimontoto/guanin/issues"

[tool.poetry]
name = "guanin"
version = "1.2.2"
description = ""
authors = ["julimontoto <juli.mlouzao@gmail.com>"]
readme = "README.md"
include = ["image", "icons", "examples", "reports"]
packages = [
    {include="guanin"}
]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^22.3.1"
setuptools = "^65.5.1"
numpy = "^1.23.4"
pandas = "^1.5.1"
scipy = "^1.9.3"
ergene = "^1.2.8"
fpdf = "^1.7.2"
scikit-learn = "^1.0.1"
mlxtend = "^0.21.0"
seaborn = "^0.12.1"
PyQt6-Qt6 = "^6.4.0"
PyQt6-sip = "^13.4.0"
PyQt6 = "^6.4.0"
jinja2 = "^3.0"
matplotlib = "3.7"

[tool.poetry.scripts]
guanin = 'guanin.gui:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
