[project]
name = "Guanin"
version = "1.2.6.2"
authors = [
  { name="Julián Montoto-Louzao", email="juli.mlouzao@gmail.com" },
  { name="Xabier Bello", email="xbello@gmail.com" },
]
dependencies = [
    "fpdf>=1.7.0",
    "Jinja>=3.1.0",
    "matplotlib>=3.7.0",
    "mlxtend>=0.22.0",
    "numpy>=1.25.0",
    "pandas==1.5.3",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "PyQt6",
    "ergene @ https://github.com/xbello/ERgene/archive/refs/tags/v1.2.4.zip",
]
description = "Guanin is a GUI-driven Analyser for Nanostring Interactive Normalization"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
guanin-cli = "guanin.cli:main"

[project.gui-scripts]
guanin-gui = "guanin.gui:main"

[project.urls]
"Homepage" = "https://github.com/julimontoto/guanin"
"Bug Tracker" = "https://github.com/julimontoto/guanin/issues"

[tool.poetry]
name = "guanin"
version = "1.2.7.1"
description = ""
authors = ["Julián Montoto-Louzao"]
readme = "README.md"
include = ["image", "icons", "examples", "reports", "changelog.md"]
packages = [
    {include="guanin"}
]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^23.0.0"
setuptools = "^65.5"
numpy = "^1.23"
pandas = "1.5.3"
scipy = "^1.9"
ergene = "^1.2"
fpdf = "^1.7"
scikit-learn = "^1.0"
mlxtend = "^0.21"
seaborn = "^0.12"
PyQt6-Qt6 = "^6.4"
PyQt6-sip = "^13.4"
PyQt6 = "^6.4"
jinja2 = "^3.0"
matplotlib = "^3.7"
pydeseq2 = "0.4.3"

[tool.poetry.scripts]
guanin = 'guanin.gui:main'


[[tool.poetry.source]]
name = "guanin"
url = "http://pypi.project/guanin"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
